<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterExtraDataActivity">

    <TextView
        android:id="@+id/tv_EnterExtraData_ExtraData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/GarmentsServicePriceTextViewAdditionalData"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/et_EnterExtraData_GarmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/round_corners"
        android:elevation="20dp"
        android:hint="@string/ExtraDataEditTextGarmentName"
        android:inputType="textCapSentences"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_EnterExtraData_ExtraData"></EditText>

    <EditText
        android:id="@+id/et_EnterExtraData_Service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/round_corners"
        android:elevation="20dp"
        android:hint="@string/ExtraDataEditTextService"
        android:inputType="textCapSentences"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_EnterExtraData_GarmentName"></EditText>

    <EditText
        android:id="@+id/et_EnterExtraData_Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/round_corners"
        android:elevation="20dp"
        android:hint="@string/ExtraDataEditTextPrice"
        android:inputType="textCapSentences"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_EnterExtraData_Service"></EditText>

    <CheckBox
        android:id="@+id/cb_EnterExtraData_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/GarmentsServicePriceCheckBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_EnterExtraData_Price"></CheckBox>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_EnterExtraData_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="16dp"
            android:backgroundTint="#0000EE"
            android:src="@drawable/ic_baseline_check_24"
            app:elevation="30dp"
            app:fabSize="normal"></com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>