<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_CustomerDetailsActivity_Titile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/CustomerDetailsEditTextTitle"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <EditText
                android:id="@+id/et_CustomerDetailsActivity_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/CustomerDetailsEditTextName"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_CustomerDetailsActivity_Titile"></EditText>

            <EditText
                android:id="@+id/et_CustomerDetailsActivity_Mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/CustomerDetailsEditTextMobile"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_CustomerDetailsActivity_Name"></EditText>

            <EditText
                android:id="@+id/et_CustomerDetailsActivity_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/CustomerDetailsEditTextAddress"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_CustomerDetailsActivity_Mobile"></EditText>

            <EditText
                android:id="@+id/et_CustomerDetailsActivity_Mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/CustomerDetailsEditTextMail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_CustomerDetailsActivity_Address"></EditText>

            <CheckBox
                android:id="@+id/cb_ShopDetails_AllDone"
                app:layout_constraintTop_toBottomOf="@id/et_CustomerDetailsActivity_Mail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/CustomerDetailsCheckBoxDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></CheckBox>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_CustomerDetails_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="#0000EE"
        android:elevation="20dp"
        android:src="@drawable/ic_baseline_check_24"
        app:fabSize="auto"></com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>