<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_SignInActivity_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:text="@string/SignInPageTextViewTitle"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <EditText
                android:id="@+id/et_SignIn_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/SignInPageEditTextUserName"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_SignInActivity_Title"></EditText>

            <EditText
                android:id="@+id/et_SignIn_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/SignInPageEditTextMailId"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_SignIn_UserName"></EditText>

            <EditText
                android:id="@+id/et_SignIn_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/SignInPageEditTextAddress"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_SignIn_Email"></EditText>


            <EditText
                android:id="@+id/et_SignIn_MobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/SignInPageEditTextMobileNumber"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_SignIn_Address"></EditText>

            <EditText
                android:id="@+id/et_SignIn_SetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/SignInPageEditTextSetPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_SignIn_MobileNumber"></EditText>

            <EditText
                android:id="@+id/et_SignIn_ReenterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/SignInPageEditTextReenterPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_SignIn_SetPassword"></EditText>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_SignIn_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:backgroundTint="#0000EE"
        android:src="@drawable/ic_baseline_check_24"
        android:visibility="invisible"
        app:elevation="20dp"
        app:fabSize="auto"></com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
