<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Shop_Details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ShopDetailsActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/ShopDetailsPageTextViewTitle"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <EditText
                android:id="@+id/et_ShopDetails_ShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/ShopDetailsPageEditTextShopName"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ShopDetailsActivityTitle"></EditText>

            <EditText
                android:id="@+id/et_ShopDetails_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/ShopDetailsPageEditTextShopAddress"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_ShopDetails_ShopName"></EditText>

            <EditText
                android:id="@+id/et_ShopDetails_Timings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/ShopDetailsPageEditTextShopTimings"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_ShopDetails_Address"></EditText>

            <EditText
                android:id="@+id/et_ShopDetails_ContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/round_corners"
                android:elevation="20dp"
                android:hint="@string/ShopDetailsPageEditTextShopContactNumber"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_ShopDetails_Timings"></EditText>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_ShopDetails_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:backgroundTint="#0000EE"
        android:src="@drawable/ic_baseline_check_24"
        android:visibility="invisible"
        app:elevation="20dp"
        app:fabSize="auto"></com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>